Criado TODA a parte de Security do sistema

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/agaply
 spring.datasource.username=postgres
 spring.datasource.password=1909
 spring.jpa.hibernate.ddl-auto=update
+
+api.security.token.secret=meu-segredo-super-secreto-do-agaply
