--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -11,10 +11,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-
       - name: Checkout do código
         uses: actions/checkout@v4
-
 
       - name: Configurar JDK 17
         uses: actions/setup-java@v4
@@ -23,10 +21,18 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
-
-      - name: Rodar Testes com Maven
+      - name: Compilar e Testar
         run: mvn clean verify
 
+      - name: Login no Docker Hub
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Testar Build da Imagem Docker
-        run: docker build -t agaply-api .
+      - name: Build e Push da Imagem Docker
+        if: github.event_name != 'pull_request'
+        run: |
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/agaply-api:latest .
+          docker push ${{ secrets.DOCKER_USERNAME }}/agaply-api:latest
